style/main.css
/*Text Formatting */
h1{
    text-align: center;
    font-family: 'Open Sans', sans-serif;
    font-size: 32pt;
    color: #fff;
    font-weight: 800;
}

h2{
    font-family: 'Open Sans', sans-serif;
    font-size: 32pt;
    color: #000000;
    font-weight: 800;
}

.section h2{
    text-align: center;
    padding-bottom: 20px;
}

p{
    font-family: 'Open Sans', sans-serif;
    font-size: 14pt;
    color: black;
    font-weight: 400;
}

.section p{
    color: black;
}


.footer h2, p{
    color: white; 
}

/* Section Styling */

video{
    width: 100%;
    height: auto;
    padding: 0;
}

.topvid{
    background-color: black;
}

.section{
    padding-top: 20px;
    margin-left: 30px;
    margin-right: 30px;
}

.footer{
    background-color: #420;
    padding: 30px;
    padding-bottom: 75px
    
}

.padding{
    padding-bottom:15px;
}

hr{
    height: 3px;
    border: 0 none;
    background-color: black;    
}

/* Navigation Menu*/
#nav{
    background-color: #420;
    padding: 10px;
    text-align: center;
    display: block;
}

#subnav{
    background-color: #420;
    padding: 0;
    text-align: left;
    display: block;
}

.logo{
    padding-left: 0;
    height: 0.1%;
    max-height: 70px;
    width: auto;
}

.link{
    /* aligning it right */
    text-align: center;
    padding-left: 15px;
    padding-right: 15px;
    align-content: center;
    
    /*font murtaugh */
    font-family: 'Open Sans', sans-serif;
    font-size: 14pt;
    font-weight: 800;
    color: white;
    text-decoration: none;
}

.sublink{
    /* aligning it right */
    text-align: center;
    padding-left: 0;
    padding-right: 15px;
    align-content: left;
    text-align: center;
    
    /*font murtaugh */
    font-family: 'Open Sans', sans-serif;
    font-size: 20pt;
    font-weight: 800;
    color: white;
    text-decoration: none;
}


/* Button Styling */
.btn{
    margin-right: 10px;
    margin-bottom: 15px;
}

.social{
    padding: 0;
    margin:-5px;
}

/* Main Page Motion Graphic Animation Murtaugh */
.dropshadow{
    box-shadow: 0px 5px 10px grey;
}

.fadeout{
    opacity: 0;
}

